# Worlds-OpenSource-Clone

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  example_bas_script.yaml  pyproject.toml  test_bh_out.json  test_dpo.jsonl
data/eval/: bas_report.json  e2e_report.json  report.json
docs/: colab_training.md
openworlds/: __init__.py  cli.py
openworlds/eval/: __init__.py  bas.py  harness.py  models.py  pentest_judge.py  scorer.py
openworlds/tools/: __init__.py  simulator.py
openworlds/tools/handlers/: __init__.py  aws.py  base.py  bloodhound_handler.py  certipy_handler.py  crackmapexec_handler.py  curl_handler.py  evil_winrm_handler.py  ffuf_handler.py  getnpusers_handler.py  getuserspns_handler.py  ldapsearch_handler.py  nmap_handler.py  secretsdump_handler.py  smbclient_handler.py  sqlmap_handler.py  ssh.py
openworlds/train/: rl_env.py  rl_trainer.py
openworlds/training/: __init__.py  config.py  dataset.py  trainer.py
openworlds/trajectory/: __init__.py  failure_injector.py  formatter.py  generator.py  reasoning.py  state_tracker.py  swarm.py
openworlds/world_engine/: __init__.py  ad_graph.py  bloodhound_parser.py  blue_team.py  models.py  path_validator.py  vuln_injector.py  web_generator.py
scripts/: push_to_hub.py
tests/: test_models.py  test_rl.py  test_simulator.py  test_web.py
